# fastapi-keycloak

./: pyproject.toml  requirements.txt
fastapi_keycloak/: api.py  model.py
