[tool.poetry]
name = "fastapi-keycloak"
version = "1.0.0"
description = ""
authors = ["Jonas Scholl <jonas@code-specialist.com>", "Yannic Schröer <yannic@code-specialist.com>"]
maintainers = ["Jonas Scholl <jonas@code-specialist.com>", "Yannic Schröer <yannic@code-specialist.com>"]
readme = "README.md"
keywords = ['Keycloak', 'FastAPI', 'Authentication', 'Authorization']
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Topic :: Internet :: WWW/HTTP :: Session',
    'Topic :: Internet :: WWW/HTTP :: WSGI',
    'Topic :: Software Development :: Libraries :: Application Frameworks',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Framework :: FastAPI',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python :: 3.8',
]

[tool.poetry.urls]
"Documentation" = "https://fastapi-keycloak.code-specialist.com/"


[tool.poetry.dependencies]
python = ">=3.8,<3.10"
anyio = "3.4.0"
asgiref = "3.4.1"
astunparse = "1.6.3"
certifi = "2021.10.8"
charset-normalizer = "2.0.9"
click = "8.0.3"
ecdsa = "0.17.0"
fastapi = "0.70.1"
ghp-import = "2.0.2"
h11 = "0.12.0"
idna = "3.3"
importlib-metadata = "4.10.0"
itsdangerous = "2.0.1"
Jinja2 = "3.0.3"
Markdown = "3.3.6"
MarkupSafe = "2.0.1"
mergedeep = "1.3.4"
mkdocs = "1.2.3"
mkdocs-autorefs = "0.3.0"
mkdocs-material = "7.3.6"
mkdocs-material-extensions = "1.0.3"
mkdocstrings = "0.16.2"
packaging = "21.3"
pyasn1 = "0.4.8"
pydantic = "1.8.2"
Pygments = "2.10.0"
pymdown-extensions = "9.1"
pyparsing = "3.0.6"
python-dateutil = "2.8.2"
python-jose = "3.3.0"
pytkdocs = "0.12.0"
PyYAML = "6.0"
pyyaml_env_tag = "0.1"
requests = "2.26.0"
rsa = "4.8"
six = "1.16.0"
sniffio = "1.2.0"
starlette = "0.16.0"
typing-extensions = "4.0.1"
urllib3 = "1.26.7"
uvicorn = "0.16.0"
watchdog = "2.1.6"
zipp = "3.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
